💄Fix margin on edit button on mobile

--- a/src/styles/mobile.sass
+++ b/src/styles/mobile.sass
@@ -80,6 +80,9 @@
             // make the bottom bar more compact
             .edit-button
                 margin-left: auto
+                // remove the margin
+                svg.margin-right-3px
+                    margin-right: 0
                 .button-text
                     display: none
 
